--- a/WebApplication222222/Views/Home/News.cshtml
+++ b/WebApplication222222/Views/Home/News.cshtml
@@ -26,7 +26,7 @@
 
 
 
-    <!-- 第一个区域 -->
+    <!-- the first area -->
     <div class="section" style="background-color: #4e4e7d;">
         <div class="content">
             <div class="content-image">
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-    <!-- 第二个区域 -->
+    <!-- the second area -->
     <div class="section" style="background-color: #0b2a79;">
         <div class="content">
             <div class="content-image">
@@ -104,7 +104,7 @@
                 var playButton1 = document.getElementById("playButton1");
                 var closeButton1 = document.getElementById("closeButton1");
 
-                // 默认情况下，视频和视频容器都不可见
+               
                 videoContainer1.style.display = "none";
                 video1.style.display = "none";
 
@@ -141,7 +141,7 @@
                 var playButton2 = document.getElementById("playButton2");
                 var closeButton2 = document.getElementById("closeButton2");
 
-                // 默认情况下，视频和视频容器都不可见
+               
                 videoContainer2.style.display = "none";
                 video2.style.display = "none";
 
@@ -178,7 +178,7 @@
                 var playButton3 = document.getElementById("playButton3");
                 var closeButton3 = document.getElementById("closeButton3");
 
-                // 默认情况下，视频和视频容器都不可见
+                
                 videoContainer3.style.display = "none";
                 video3.style.display = "none";
 
@@ -198,7 +198,7 @@
         </div>
     </div>
 
-    <!-- 第三个区域 -->
+    <!-- the third area -->
     <div class="section" style="background-color: #193f92;">
         <div class="content">
             <div class="content-image">
@@ -260,9 +260,9 @@
                 <button id="submit">submit</button>
             </div>
             <ul class="message-list" id="message-list">
-                <!-- 留言将在这里显示 -->
+               
             </ul>
-            <!-- 显示提交成功消息的部分 -->
+           
             <div id="successMessage" style="display: none;"></div>
         </div>
         <script src="~/wwwroot/js/board.js"></script>
