--- a/WebApplication222222/wwwroot/css/Character.css
+++ b/WebApplication222222/wwwroot/css/Character.css
@@ -11,7 +11,6 @@ audio {
 
 
 
-/* 重置默认的内边距和外边距，以确保页面没有不必要的间距 */
 body, ul {
     margin: 0;
     padding: 0;
@@ -20,50 +19,50 @@ body, ul {
 /* nav */
 header {
     z-index: 2;
-    position: fixed; /* 使导航栏固定在顶部 */
+    position: fixed; 
     top: 0;
     left: 0;
     right: 0;
-    background-color: #242222; /* 导航栏背景颜色 */
-    color: #fff; /* 文本颜色 */
-    padding: 10px 0; /* 上下内边距和左右内边距 */
-    display: flex; /* 使用 Flex 布局来排列 logo 和导航链接 */
-    justify-content: space-between; /* 水平居中 */
-    align-items: center; /* 垂直居中 */
+    background-color: #242222; 
+    color: #fff; 
+    padding: 10px 0; 
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
     height: 80px;
 }
 
 .logo img {
-    max-height: 3em; /* 设置 logo 图片的最大高度 */
-    margin-left: 10px; /* 添加一些间距 */
+    max-height: 3em; 
+    margin-left: 10px; 
 }
 
 
 nav ul {
-    list-style: none; /* 去掉列表标记 */
+    list-style: none; 
 }
 
 nav li {
-    display: inline; /* 让列表项水平排列 */
-    margin-right: 20px; /* 列表项之间的右边距 */
+    display: inline; 
+    margin-right: 20px; 
 }
 
 nav a {
-    text-decoration: none; /* 去掉链接的下划线 */
-    color: #fff; /* 链接文本颜色 */
-    font-weight: bold; /* 链接文本粗体 */
+    text-decoration: none; 
+    color: #fff; 
+    font-weight: bold; 
     font-family: 'Maven Pro', Tahoma, sans-serif;
 }
 
 
 
-/* 为链接添加悬停效果 */
+
 nav a:hover {
-    text-decoration: underline; /* 链接悬停时下划线出现 */
+    text-decoration: underline; 
 }
 
 .content {
-    padding: 100px 0; /* 确保内容不被导航栏遮挡 */
+    padding: 100px 0; 
 }
 
 
@@ -86,7 +85,7 @@ body {
     box-shadow: 2px 0 4px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    justify-content: center; /* 垂直居中文本 */
+    justify-content: center; 
     
 
 }
@@ -101,20 +100,20 @@ body {
     text-align: center;
     cursor: pointer;
     transition: background-color 0.3s;
-    transform: scale(1); /* 初始状态的缩放为 1，不进行缩放 */
+    transform: scale(1); 
     z-index: 1;
 }
 
 #navbar li:hover {
     background-color: #555;
-    transform: scale(1.05); /* 在悬停时将字体放大 5% */
+    transform: scale(1.05); 
     z-index: 1;
 }
 
 
 #navbar li a {
-    text-decoration: none; /* 去掉链接下划线 */
-    color: white; /* 设置文字颜色为白色 */
+    text-decoration: none; 
+    color: white; 
     z-index: 1;
     font-weight: bold;
     
@@ -157,46 +156,46 @@ body {
 
 
 #navbar ul li {
-    background-image: url("/wwwroot/image/wind.png"); /* 设置第一个图像的路径 */
-    background-repeat: no-repeat; /* 禁止图像重复 */
-    background-position: 180px 10px; /* 将图像定位在列表项的右侧中间 */
-    padding-right: 20px; /* 添加一些右侧内边距，以防止文本与图像重叠 */
+    background-image: url("/wwwroot/image/wind.png");
+    background-repeat: no-repeat; 
+    background-position: 180px 10px; 
+    padding-right: 20px; 
     background-size: 30px 30px;
 }
 
     #navbar ul li:nth-child(2) {
-        background-image: url("/wwwroot/image/stone.png"); /* 设置第二个图像的路径 */
+        background-image: url("/wwwroot/image/stone.png");
         background-size: 30px 30px;
     }
 
     #navbar ul li:nth-child(3) {
-        background-image: url("/wwwroot/image/storm.png"); /* 设置第三个图像的路径 */
+        background-image: url("/wwwroot/image/storm.png"); 
         background-size: 30px 30px;
     }
 
     #navbar ul li:nth-child(4) {
-        background-image: url("/wwwroot/image/grass.png"); /* 设置第四个图像的路径 */
+        background-image: url("/wwwroot/image/grass.png"); 
         background-size: 30px 30px;
     }
 
     #navbar ul li:nth-child(5) {
-        background-image: url("/wwwroot/image/ice.png"); /* 设置第五个图像的路径 */
+        background-image: url("/wwwroot/image/ice.png"); 
         background-size: 30px 30px;
     }
 
     #navbar ul li:nth-child(6) {
-        background-image: url("/wwwroot/image/water.png"); /* 设置第五个图像的路径 */
+        background-image: url("/wwwroot/image/water.png"); 
         background-size: 30px 30px;
     }
 
     #navbar ul li:nth-child(7) {
-        background-image: url("/wwwroot/image/fire.png"); /* 设置第五个图像的路径 */
+        background-image: url("/wwwroot/image/fire.png"); 
         background-size: 30px 30px;
     }
 
 #content {
     margin-left: 250px;
-    padding-top: 80px; /* 与导航栏高度一致，确保内容不被遮挡 */
+    padding-top: 80px; 
     padding-bottom: 50px;
    
 }
@@ -206,7 +205,7 @@ body {
     margin: 50px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-    font-size: 16px; /* 调整字体大小 */
+    font-size: 16px; 
     height: 500px;
     z-index: 1;
 }
@@ -216,7 +215,7 @@ p {
     color: #f9f2f2;
     z-index: 1;
 }
-/* 每个section */
+/* section */
 /* section1 */
 #section1 {
     text-align: center;
@@ -243,7 +242,7 @@ p {
     font-weight: bold;
     margin-bottom: 30px;
     font-weight: bold;
-    transition: opacity 2s, background-color 2s; /* 添加过渡效果只针对透明度 */
+    transition: opacity 2s, background-color 2s; 
     padding: 10px;
     border-radius: 5%;
     background-color: rgba(217, 240, 245, 0.414);
@@ -276,7 +275,7 @@ p {
     font-weight: bold;
     margin-bottom: 30px;
     font-weight: bold;
-    transition: opacity 2s, background-color 2s; /* 添加过渡效果只针对透明度 */
+    transition: opacity 2s, background-color 2s; 
     padding: 10px;
     border-radius: 5%;
     background-color: rgba(252, 243, 192, 0.404);
@@ -296,7 +295,7 @@ p {
 #section3 h2 {
     padding: 50px;
     font-size: 2.5em;
-    color: #f7eeef; /* 蓝色，你可以根据需求更改颜色 */
+    color: #f7eeef; 
     margin-bottom: 20px;
     text-align: center;
 }
@@ -311,7 +310,7 @@ p {
     font-weight: bold;
     margin-bottom: 30px;
     font-weight: bold;
-    transition: opacity 2s, background-color 2s; /* 添加过渡效果只针对透明度 */
+    transition: opacity 2s, background-color 2s; 
     padding: 10px;
     border-radius: 5%;
     background-color: rgba(242, 213, 246, 0.298);
@@ -331,7 +330,7 @@ p {
 #section4 h2 {
     padding: 30px;
     font-size: 2.5em;
-    color: #0c202e; /* 蓝色，你可以根据需求更改颜色 */
+    color: #0c202e; 
     margin-bottom: 20px;
     text-align: center;
 }
@@ -348,7 +347,7 @@ p {
     color: rgb(4, 77, 43);
     font-weight: bold;
     margin-bottom: 30px;
-    transition: opacity 2s, background-color 2s; /* 添加过渡效果只针对透明度 */
+    transition: opacity 2s, background-color 2s; 
     padding: 10px;
     border-radius: 5%;
     background-color: rgba(172, 235, 235, 0.243);
@@ -367,7 +366,7 @@ p {
 #section5 h2 {
     padding: 40px;
     font-size: 2.5em;
-    color: #1f5980; /* 蓝色，你可以根据需求更改颜色 */
+    color: #1f5980; 
     margin-bottom: 20px;
     margin-left: 45%;
 }
@@ -384,7 +383,7 @@ p {
     color: rgb(28, 67, 85);
     font-weight: bold;
     margin-bottom: 30px;
-    transition: opacity 2s, background-color 2s; /* 添加过渡效果只针对透明度 */
+    transition: opacity 2s, background-color 2s; 
     padding: 10px;
     border-radius: 5%;
     background-color: rgba(200, 237, 243, 0.538);
@@ -421,7 +420,7 @@ p {
     font-weight: bold;
     margin-bottom: 30px;
     font-weight: bold;
-    transition: opacity 2s, background-color 2s; /* 添加过渡效果只针对透明度 */
+    transition: opacity 2s, background-color 2s; 
     padding: 10px;
     border-radius: 5%;
     background-color: rgba(217, 240, 245, 0.414);
@@ -454,7 +453,7 @@ p {
     font-weight: bold;
     margin-bottom: 30px;
     font-weight: bold;
-    transition: opacity 2s, background-color 2s; /* 添加过渡效果只针对透明度 */
+    transition: opacity 2s, background-color 2s; 
     padding: 10px;
     border-radius: 5%;
     background-color: rgba(217, 240, 245, 0.414);
@@ -471,7 +470,7 @@ img {
 }
  */
 
-/* 为每个section定义不同的渐变背景 */
+
 #section1 {
     background: linear-gradient(to bottom left, #a6dcf7, #a1e0d2);
 }
@@ -526,7 +525,7 @@ img {
         right: 0;
         bottom: 0;
         left: 0;
-        z-index: -1; /* 修改为 z-index: 0; */
+        z-index: -1; /* z-index: 0; */
         border-radius: 10px;
     }
 
@@ -557,12 +556,12 @@ img {
         right: 0;
         bottom: 0;
         left: 0;
-        z-index: -1; /* 修改为 z-index: 0; */
+        z-index: -1; /* z-index: 0; */
         border-radius: 10px;
     }
 
 
-/* 同样的方式配置section3、section4、section5 */
+/* section3、section4、section5 */
 
 
 /* section3 */
@@ -880,7 +879,7 @@ footer {
 }
 
 .info {
-    margin-bottom: 10px; /* 可以根据需要调整间距 */
+    margin-bottom: 10px; 
     z-index: 3;
 }
 
@@ -891,7 +890,7 @@ footer {
 }
 
 .value {
-    margin-left: 10px; /* 可以根据需要调整间距 */
+    margin-left: 10px; 
     z-index: 3;
 }
 .contact-info :last-child{
