--- a/WebApplication222222/Views/Elements/Index.cshtml
+++ b/WebApplication222222/Views/Elements/Index.cshtml
@@ -3,300 +3,10 @@
 @{
     ViewBag.Title = "Index";
 }
-<style>
-    body {
-        margin-top: 200px; /* 向下移动200px */
-    }
+<head>
+    <link rel="stylesheet" href="~/wwwroot/css/Element.css">
+</head>
 
-    body {
-        margin: 0;
-        padding: 0;
-        margin-top: 200px;
-        background-image: url("/wwwroot/image/sea2.png");
-        background-size: cover;
-        background-attachment: fixed;
-        background-repeat: no-repeat;
-        position: relative; /* 使 ::before 伪元素相对于 body 元素定位 */
-    }
-
-        body::before {
-            content: "";
-            background-image: url("/wwwroot/image/sea2.png");
-            background-size: cover;
-            background-attachment: fixed;
-            background-repeat: no-repeat;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            filter: blur(5px); /* 调整虚化程度 */
-            z-index: -1;
-        }
-
-
-    .table {
-        width: 100%;
-        border-collapse: collapse;
-        margin: 20px 0;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 添加阴影效果 */
-    }
-
-        .table th, .table td {
-            border: 1px solid #dddddd;
-            padding: 10px; /* 增加内边距 */
-            text-align: left;
-        }
-
-        .table th {
-            font-weight: bold;
-            background-color: rgba(100,100,100,0.5); /* 添加表头背景颜色 */
-            color: antiquewhite;
-        }
-
-
-
-        .table a {
-            text-decoration: none;
-            color: antiquewhite;
-        }
-
-        .table tr:hover {
-            background-color: rgba(100,100,100,0.4);
-            transition: background-color 0.3s;
-        }
-
-
-
-
-
-    /* footer */
-
-    footer {
-        background-color: #333;
-        color: #f9f9f9;
-        padding: 20px;
-        text-align: center;
-    }
-    /*
-    .clear {
-        clear: both;
-    } */
-
-    /* map */
-
-    #container {
-        width: 100%; /* Make the map container responsive */
-        padding-bottom: 100%; /* Set the aspect ratio of the map container (1:1 in this case) */
-        position: relative; /* Required for padding-bottom to work */
-        border: #c3f0f5 solid 5px;
-        border-radius: 5%;
-    }
-
-    .location {
-        margin-left: 15%;
-        margin-bottom: 5%;
-        margin-top: -20%;
-        width: 25%;
-    }
-
-    /* word */
-
-    .contact-info {
-        position: absolute;
-        margin-top: 8%;
-        margin-left: 45%;
-        color: #fff;
-        font-size: larger;
-    }
-
-    .info {
-        margin-bottom: 10px; /* 可以根据需要调整间距 */
-    }
-
-    .label {
-        font-weight: bold;
-        color: rgb(79, 165, 251);
-    }
-
-    .value {
-        margin-left: 10px; /* 可以根据需要调整间距 */
-    }
-
-    .contact-info :last-child {
-        font-weight: bold;
-    }
-
-    .HoYo:hover {
-        color: dodgerblue;
-        font-size: larger;
-        transition: all 1s;
-    }
-
-    /* board */
-
-    .message-board {
-        width: 30%;
-        margin-top: 18%;
-        margin-left: 45%;
-        background-color: rgb(73, 153, 234);
-        padding: 1%;
-        border-radius: 5px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    }
-
-    h4 {
-        text-align: center;
-        color: aliceblue;
-    }
-
-    .message-input {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-top: 20px;
-    }
-
-    #message {
-        width: 70%;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        font-size: 10px;
-    }
-
-    #submit {
-        background-color: rgb(19, 85, 198);
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        padding: 10px 20px;
-        cursor: pointer;
-        font-size: 10px;
-    }
-
-    .message-list {
-        list-style: none;
-        padding: 0;
-        margin-top: 20px;
-    }
-
-        .message-list li {
-            background-color: #f9f9f9;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 10px;
-            margin: 10px 0;
-        }
-    /* icon */
-
-    .social-media {
-        position: absolute;
-        left: 10%;
-    }
-
-
-        .social-media a img {
-            /* float: left; */
-            width: 4%;
-            height: 4%;
-            margin-top: -8%;
-            margin-right: 1ex;
-        }
-
-
-    .element-intro {
-        font-size: 18px; /* 设置字体大小 */
-        line-height: 1.4; /* 设置行高 */
-        margin-bottom: 20px; /* 设置底边距 */
-        color: aliceblue; /* 设置文本颜色 */
-        background-color: rgba(166, 124, 82, 0.3); /* 设置背景颜色 */
-        padding: 30px; /* 设置内边距 */
-        border: 1px solid #ccc; /* 添加边框 */
-        border-radius: 3%;
-        width: 45%;
-        margin-left: 40%;
-        margin-top:10%;
-    }
-
-    /* 图片容器 */
-    .image-container {
-        display: block;
-        margin: 0 auto; /* 让图片容器水平居中 */
-        text-align: center;
-        position: relative;
-        margin-bottom:18%;
-    }
-
-        .image-container img {
-            max-width: 50%;
-            max-height: 50%;
-        }
-
-    .slide {
-        display: none;
-        width: 100%;
-        transition: opacity 0.5s ease; /* 添加过渡效果 */
-    }
-
-        .slide.active {
-            display: block;
-        }
-
-    /* 包含箭头按钮的容器 */
-    .slider-container {
-        display: flex;
-        overflow: hidden;
-        align-items: center;
-        justify-content: center; /* 控制按钮在图片中间高度的位置 */
-        position: relative;
-    }
-
-    /* 左箭头按钮 */
-    .prev, .next {
-        background-color: #ccc;
-        border: none;
-        color: #fff;
-        font-size: 20px;
-        padding: 10px 15px; /* 调整按钮内边距，使其更美观 */
-        cursor: pointer;
-        position: absolute;
-        top: 10%; /* 位于图片中间高度的位置 */
-        transform: translateY(-50%); /* 垂直居中 */
-        border-radius: 5px; /* 圆角按钮 */
-        transition: background-color 0.3s, color 0.3s; /* 添加颜色过渡效果 */
-    }
-
-    .prev {
-       
-        left: 20%; /* 左按钮右移一些 */
-        background-color:darkturquoise;
-    }
-
-    .next {
-        background-color: darkturquoise;
-        right: 20%; /* 右按钮左移一些 */
-    }
-
-        /* 当鼠标悬停在按钮上时改变背景颜色 */
-        .prev:hover, .next:hover {
-            background-color:cadetblue;
-            color: #fff;
-        }
-
-
-
-    .friend img {
-        width: 25%;
-        height: 40%;
-        float:left;
-        margin-left:10%;
-        margin-bottom:5%;
-    }
-
-</style>
-
-<script src="~/wwwroot/js/changeColor.js"></script>
 
 
 
@@ -417,9 +127,9 @@
             <button id="submit">submit</button>
         </div>
         <ul class="message-list" id="message-list">
-            <!-- 留言将在这里显示 -->
+           
         </ul>
-        <!-- 显示提交成功消息的部分 -->
+       
         <div id="successMessage" style="display: none;"></div>
     </div>
     <script src="~/wwwroot/js/board.js"></script>
