--- a/WebApplication222222/wwwroot/css/Index.css
+++ b/WebApplication222222/wwwroot/css/Index.css
@@ -11,7 +11,7 @@ audio {
 
 
 
-/* 重置默认的内边距和外边距，以确保页面没有不必要的间距 */
+
 body, ul {
     margin: 0;
     padding: 0;
@@ -20,47 +20,47 @@ body, ul {
 /* nav */
 header {
     z-index: 2;
-    position: fixed; /* 使导航栏固定在顶部 */
+    position: fixed; 
     top: 0;
     left: 0;
     right: 0;
-    background-color: #242222; /* 导航栏背景颜色 */
-    color: #fff; /* 文本颜色 */
-    padding: 10px 0; /* 上下内边距和左右内边距 */
-    display: flex; /* 使用 Flex 布局来排列 logo 和导航链接 */
-    justify-content: space-between; /* 水平居中 */
-    align-items: center; /* 垂直居中 */
+    background-color: #242222; 
+    color: #fff; 
+    padding: 10px 0; 
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
     height: 80px;
 }
 
 .logo img {
-    max-height: 3em; /* 设置 logo 图片的最大高度 */
-    margin-left: 10px; /* 添加一些间距 */
+    max-height: 3em; 
+    margin-left: 10px; 
 }
 
 
 nav ul {
-    list-style: none; /* 去掉列表标记 */
+    list-style: none; 
 }
 
 nav li {
-    display: inline; /* 让列表项水平排列 */
-    margin-right: 20px; /* 列表项之间的右边距 */
+    display: inline; 
+    margin-right: 20px; 
 }
 
 nav a {
-    text-decoration: none; /* 去掉链接的下划线 */
-    color: #fff; /* 链接文本颜色 */
-    font-weight: bold; /* 链接文本粗体 */
+    text-decoration: none;
+    color: #fff; 
+    font-weight: bold; 
 }
 
-    /* 为链接添加悬停效果 */
+   
     nav a:hover {
-        text-decoration: underline; /* 链接悬停时下划线出现 */
+        text-decoration: underline; 
     }
 
 .content {
-    padding: 100px 0; /* 确保内容不被导航栏遮挡 */
+    padding: 100px 0; 
 }
 
 
@@ -104,7 +104,7 @@ nav a {
     }
 
 /* video */
-/* 样式图标 */
+
 
 
 .show-video {
@@ -141,12 +141,12 @@ nav a {
     width: 30px;
     cursor: pointer;
     z-index: 1;
-    transition: opacity 0.3s; /* 添加过渡效果，透明度渐变 */
+    transition: opacity 0.3s; 
 }
 
     .video-icon:hover {
-        opacity: 0.7; /* 降低透明度以强调 */
-        transform: scale(1.1); /* 图标微微放大 */
+        opacity: 0.7; 
+        transform: scale(1.1); 
     }
 
 
@@ -204,7 +204,7 @@ footer {
 }
 
 .info {
-    margin-bottom: 10px; /* 可以根据需要调整间距 */
+    margin-bottom: 10px; 
 }
 
 .label {
@@ -213,7 +213,7 @@ footer {
 }
 
 .value {
-    margin-left: 10px; /* 可以根据需要调整间距 */
+    margin-left: 10px; 
 }
 
 .contact-info :last-child {
