--- a/WebApplication222222/wwwroot/css/News.css
+++ b/WebApplication222222/wwwroot/css/News.css
@@ -10,7 +10,7 @@ audio {
 
 
 
-/* 重置默认的内边距和外边距，以确保页面没有不必要的间距 */
+
 body, ul {
     margin: 0;
     padding: 0;
@@ -19,57 +19,57 @@ body, ul {
 /* nav */
 header {
     z-index: 3;
-    position: fixed; /* 使导航栏固定在顶部 */
+    position: fixed; 
     top: 0;
     left: 0;
     right: 0;
-    background-color: #242222; /* 导航栏背景颜色 */
-    color: #fff; /* 文本颜色 */
-    padding: 10px 0; /* 上下内边距和左右内边距 */
-    display: flex; /* 使用 Flex 布局来排列 logo 和导航链接 */
-    justify-content: space-between; /* 水平居中 */
-    align-items: center; /* 垂直居中 */
+    background-color: #242222; 
+    color: #fff; 
+    padding: 10px 0; 
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
     height: 80px;
 }
 
 .logo img {
-    max-height: 3em; /* 设置 logo 图片的最大高度 */
-    margin-left: 10px; /* 添加一些间距 */
+    max-height: 3em; 
+    margin-left: 10px;
 }
 
 
 nav ul {
-    list-style: none; /* 去掉列表标记 */
+    list-style: none;
 }
 
 nav li {
-    display: inline; /* 让列表项水平排列 */
-    margin-right: 20px; /* 列表项之间的右边距 */
+    display: inline; 
+    margin-right: 20px; 
 }
 
 nav a {
-    text-decoration: none; /* 去掉链接的下划线 */
-    color: #fff; /* 链接文本颜色 */
-    font-weight: bold; /* 链接文本粗体 */
+    text-decoration: none; 
+    color: #fff; 
+    font-weight: bold; 
 }
 
-/* 为链接添加悬停效果 */
+
 nav a:hover {
-    text-decoration: underline; /* 链接悬停时下划线出现 */
+    text-decoration: underline; 
 }
 
 .content {
-    padding: 100px 0; /* 确保内容不被导航栏遮挡 */
+    padding: 100px 0; 
 }
 
 
-/* 区域内的内容样式 */
 
-/* 第一个 */
+
+/* first */
 .content {
-    background-image: url('/wwwroot/image/bgp.jpg'), url('/wwwroot/image/round.jpg'); /* 使用逗号分隔多个背景图片 */
-    background-size: cover, cover; /* 分别设置两个背景图片的尺寸 */
-    background-attachment: fixed, fixed; /* 设置两个背景图片都固定在视口中 */
+    background-image: url('/wwwroot/image/bgp.jpg'), url('/wwwroot/image/round.jpg'); 
+    background-size: cover, cover; 
+    background-attachment: fixed, fixed; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -125,7 +125,7 @@ nav a:hover {
     background-color: rgba(98, 113, 144, 0.5);
     padding: 10px;
     font-size: 17px;
-    box-shadow: 5px 5px 5px rgba(4, 8, 60, 0.5); /* 以逗号分隔的参数：水平偏移、垂直偏移、模糊半径、阴影颜色 */
+    box-shadow: 5px 5px 5px rgba(4, 8, 60, 0.5); 
     font-family: 'Maven Pro', Tahoma, sans-serif;
   }
   
@@ -134,16 +134,16 @@ nav a:hover {
     margin-top: 1%;
     margin-left: -20%;
     font-size: 24px;
-    color: #a7cbec; /* 修改标题的字体颜色 */
+    color: #a7cbec; 
 }
 
-/* 添加阴影效果 */
+
 .section:hover {
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
 }
 
 
-/* 第二个 */
+/* second */
 /* picture and text */
 .content-area1 img {
     position: absolute;
@@ -233,9 +233,9 @@ nav a:hover {
     max-width:75%;
 } 
 .on1:hover {
-    transform: scale(1.1); /* 图标微微放大 */
-    filter: brightness(1.2); /* 图标颜色变深 */
-    transition: transform 0.3s ease, filter 0.3s ease; /* 添加过渡效果，使变化更平滑 */
+    transform: scale(1.1); 
+    filter: brightness(1.2); 
+    transition: transform 0.3s ease, filter 0.3s ease; 
 }
 .close-button1 {
     position: absolute;
@@ -282,9 +282,9 @@ nav a:hover {
     max-width:75%;
 } 
 .on2:hover {
-    transform: scale(1.1); /* 图标微微放大 */
-    filter: brightness(1.2); /* 图标颜色变深 */
-    transition: transform 0.3s ease, filter 0.3s ease; /* 添加过渡效果，使变化更平滑 */
+    transform: scale(1.1); 
+    filter: brightness(1.2); 
+    transition: transform 0.3s ease, filter 0.3s ease; 
 }
 .close-button2 {
     position: absolute;
@@ -335,9 +335,9 @@ nav a:hover {
     max-width:75%;
 } 
 .on3:hover {
-    transform: scale(1.1); /* 图标微微放大 */
-    filter: brightness(1.2); /* 图标颜色变深 */
-    transition: transform 0.3s ease, filter 0.3s ease; /* 添加过渡效果，使变化更平滑 */
+    transform: scale(1.1); 
+    filter: brightness(1.2); 
+    transition: transform 0.3s ease, filter 0.3s ease; 
 }
 .close-button3 {
     position: absolute;
@@ -350,16 +350,16 @@ nav a:hover {
 
 
 
-/* 第三个 */
+/* second */
 .content-intro3 img {
     position: absolute;
     max-width: 55%;
     left: 43%;
     margin-top: -10%;
     z-index: 1;
-    border: 3px solid rgb(7, 7, 59); /* 蓝色边框 */
-    border-radius: 10px; /* 边框圆角半径，可以根据需要调整 */
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* 图片阴影，可以根据需要调整参数 */
+    border: 3px solid rgb(7, 7, 59); 
+    border-radius: 10px; 
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); 
 }
 
 .concert img {
@@ -412,7 +412,7 @@ footer {
 }
 
 .info {
-    margin-bottom: 10px; /* 可以根据需要调整间距 */
+    margin-bottom: 10px; 
 }
 
 .label {
@@ -421,7 +421,7 @@ footer {
 }
 
 .value {
-    margin-left: 10px; /* 可以根据需要调整间距 */
+    margin-left: 10px; 
 }
 .contact-info :last-child{
     font-weight: bold;
