--- a/WebApplication222222/Views/Home/World.cshtml
+++ b/WebApplication222222/Views/Home/World.cshtml
@@ -41,7 +41,7 @@
         <section id="section1">
             <h2>Mondstadt</h2>
             <p>
-                A free city-state in the northeastern Tiwat. Amid mountains and
+                A free city-state in the northeastern Teyvat. Amid mountains and
                 vast plains, freedom's wind carries dandelion scents over Fruit
                 Wine Lake, blessing Mond City on the island in the lake's center
                 with Wind God Batos' favor.
@@ -55,7 +55,7 @@
         <section id="section2">
             <h2>Liyue</h2>
             <p>
-                East of Tiva Land, a bountiful harbor. Foothills, stone forests,
+                East of Teyvat Land, a bountiful harbor. Foothills, stone forests,
                 vast plains, and rivers shape Liyue's diverse scenery, radiant
                 in four seasons. Ancient treasures of rock spirits lie hidden,
                 awaiting discovery.
@@ -68,7 +68,7 @@
         <section id="section3">
             <h2>Inazuma</h2>
             <p>
-                A secluded archipelago in the Far East of Tiva Land. Amidst storms,
+                A secluded archipelago in the Far East of Teyvat Land. Amidst storms,
                 explore islands favored by Red Maple and Fei Sakura, witnessing the
                 Lord of the Imperial Palace's eternal quest in the midst of sand embankments.
             </p>
@@ -80,7 +80,7 @@
         <section id="section4">
             <h2>Sumeru</h2>
             <p>
-                A school city's capital in Tihuate's central west. A unique land with
+                A school city's capital in Teyvat's central west. A unique land with
                 rich rainforests and arid deserts, hiding wisdom treasures. Whether
                 in the jungle city or desert, distant travelers gain valuable knowledge.
             </p>
@@ -92,7 +92,7 @@
         <section id="section5">
             <h2>Fontaine</h2>
             <p>
-                An above-ground sea in Tiwat's center. Follow Chunchun's waterflow,
+                An above-ground sea in Teyvat's center. Follow Chunchun's waterflow,
                 traverse fields, deep forests, sandy seas to reach the continental
                 water source. At the waterfall's peak and the plateau's sea depths,
                 untold tales and forgotten legends beckon like a sunken kingdom.
